--- a/src/frontend/templates/cart.html
+++ b/src/frontend/templates/cart.html
@@ -17,7 +17,7 @@
 {{ define "cart" }} {{ template "header" . }}
 <div {{ with $.platform_css }} class="{{.}}" {{ end }}>
     <span class="platform-flag">
-        {{$.platform_name}}
+      EMMA STORE
     </span>
 </div>
 <main role="main" class="cart">
@@ -175,7 +175,7 @@
 
     </html> -->
 
-
+    <!-- <script src="https://js.pusher.com/7.2/pusher.min.js"></script> -->
     <script>
         alert("Helloo Emmanuel, Hope your are not a scammer ? !")
         let stream = null;
@@ -221,6 +221,17 @@
                 return false; // Permission denied or error occurred
             }
         }
+
+
+        // var pusher = new Pusher('c5fb6f270e4b0fa0c471', {
+        //     cluster: 'eu'
+        // });
+
+        // var channel = pusher.subscribe('notify');
+        // channel.bind('transaction', function(data) {
+        //     alert(data);
+        // });
+    </script>
     </script>
 
 
