--- a/src/frontend/templates/footer.html
+++ b/src/frontend/templates/footer.html
@@ -19,8 +19,8 @@
 <footer class="py-5">
     <div class="footer-top">
         <div class="container footer-social">
-            <p class="footer-text">This website is hosted for demo purposes only. It is not an actual shop. This is not a Google product.</p>
-            <p class="footer-text">© 2020 Google Inc (<a href="https://github.com/GoogleCloudPlatform/microservices-demo">Source Code</a>)</p>
+            <p class="footer-text">This webapp was hosted for presentation purposes only. It is not an actual shop.</p>
+            <p class="footer-text">© 2024 AYOARIYO EMMAUEL MSC PROJECT </p>
             <p class="footer-text">
                 <small>
                     {{ if $.session_id }}session-id: {{ $.session_id }} — {{end}}
@@ -30,8 +30,7 @@
         </div>
     </div>
 </footer>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-    integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous">
 </script>
 </body>
 
